test: test de deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,18 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          cache: "pnpm"
 
+      - name: Install PNPM
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Setup PNPM cache
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+          
       - name: Install project
         run: pnpm install
 
