--- a/package.json
+++ b/package.json
@@ -64,9 +64,12 @@
     "zod": "latest"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint-plugin-import": "^2.31.0",
+    "install": "^0.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
