refactor: refatorar para jsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,16 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/eventos/[id]/EventDashboard.tsx"
+    "components/eventos/[id]/EventDashboard.tsx",
+    "app/page.jsx",
+    "components/public/PublicHeader.jsx",
+    "components/eventos/EventCard2.jsx",
+    "components/eventos/EventBatchSelection.jsx",
+    "app/eventos/page.jsx",
+    "app/eventos/[id]/page.jsx",
+    "components/BatchManageForm.tsx",
+    "components/eventos/EventList.jsx",
+    "components/eventos/EventListItem.jsx"
   ],
   "exclude": [
     "node_modules"
